fixed error in building dynamic library.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,11 +4,15 @@
 FILE(GLOB SRCH2_LIB_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp" "index/*.cpp" "ranking/*.cpp" "operation/*.cpp" "operation/physical_plan/*.cpp" "postprocessing/*.cpp" "record/*.cpp" "util/*.cpp" "analyzer/*.cpp" "query/*.cpp" "license/*.cpp" "geo/*.cpp" "../../thirdparty/snappy-1.0.4/*.cc" "serialization/*.cpp" "highlighter/*.cpp")
 
 IF(BUILD_JNI)
-    find_package(JNI)
     FILE(GLOB JNI_FILE RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "../java/jni/*.cpp")
     SET(SRCH2_LIB_SRC ${SRCH2_LIB_SRC} ${JNI_FILE})
     INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
-    SET(CMAKE_REQUIRED_LIBRARIES ${CMAKE_REQUIRED_LIBRARIES} ${JNI_LIBARIES})
+ENDIF()
+
+IF (ANDROID)
+   SET( jsoncpp_LIBRARY ${CMAKE_SOURCE_DIR}/thirdparty/json/jsoncpp-src/android/libs/armeabi-v7a/libjsoncpp.a)
+ELSE()
+   SET( jsoncpp_LIBRARY ${CMAKE_SOURCE_DIR}/thirdparty/json/jsoncpp-src/build/libjsoncpp.a)
 ENDIF()
 
 # additional includes
@@ -29,7 +33,7 @@ ENDIF()
 SET_TARGET_PROPERTIES(srch2_core PROPERTIES COMPILE_FLAGS -fPIC)
 
 IF(ANDROID)
-    TARGET_LINK_LIBRARIES(srch2_core ${Boost_LIBRARIES} ${CMAKE_REQUIRED_LIBRARIES})
+    TARGET_LINK_LIBRARIES(srch2_core ${Boost_LIBRARIES} ${CMAKE_REQUIRED_LIBRARIES} ${jsoncpp_LIBRARY})
 ELSE()
     TARGET_LINK_LIBRARIES(srch2_core ${Boost_LIBRARIES} ${crypto_LIBRARY} ${CMAKE_REQUIRED_LIBRARIES})
 ENDIF()		
